# DailyDose

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
Documentation/Spec/: databases.md  selection_algorithm.md
scripts/: init_db.py
src/: api.py  selection.py  settings.py
src/db/: __init__.py  models.py
tests/: test_api.py  test_selection.py
